--- a/report.tex
+++ b/report.tex
@@ -9,7 +9,7 @@
 
 \title{TI1805 Project: Raytracer}
 \author{Better Late Than Never:\\
-		Piet van Agtmaal <nr>\\
+		Piet van Agtmaal 4321278\\
 		Gerlof Fokkema <nr>\\
 		Jente Hidskes 4335732\\
 		Owen Huang <nr>\\
