Added st.id (Owen + Skip)
yay

--- a/report.tex
+++ b/report.tex
@@ -12,9 +12,9 @@
 		Piet van Agtmaal 4321278\\
 		Gerlof Fokkema <nr>\\
 		Jente Hidskes 4335732\\
-		Owen Huang <nr>\\
+		Owen Huang <4317459>\\
 		Arjan Langerak <nr>\\
-		Skip Lentz <nr>\\
+		Skip Lentz <4334051>\\
 		Dennis van Velzen <nr>\\
 	   }
 
