Verkleinde auto + studienummer

--- a/report.tex
+++ b/report.tex
@@ -13,7 +13,7 @@
 		Gerlof Fokkema <nr>\\
 		Jente Hidskes 4335732\\
 		Owen Huang <4317459>\\
-		Arjan Langerak <nr>\\
+		Arjan Langerak <4211235>\\
 		Skip Lentz <4334051>\\
 		Dennis van Velzen <nr>\\
 	   }
