--- a/report.tex
+++ b/report.tex
@@ -16,6 +16,7 @@
 		Arjan Langerak <4211235>\\
 		Skip Lentz <4334051>\\
 		Dennis van Velzen <nr>\\
+		Richard van de Kuilen <4226151>\\
 	   }
 
 \begin{document}
