textures op spheres

--- a/report.tex
+++ b/report.tex
@@ -26,7 +26,7 @@ Ray tracing does indeed deliver beautiful images. That is, if it supports enough
 	\item Shading (Phong illumination model);
 	\item Reflections;
 	\item Refractions (inluding Schlick's approximation);
-	\item Shadows;
+	\item Shadows (from multiple light sources);
 	\item Textures;
 	\item Anti-aliasing (jittered super-sampling);
 	\item Hierarchical bounding box tree;
@@ -55,6 +55,8 @@ A first go at textures:\\
 \includegraphics[scale=0.5]{images/playing}\\
 
 Testing multiple shadows:\\
-\includegraphics[keepaspectratio,width=8.0cm]{images/mshadow}\\
+\includegraphics[keepaspectratio,width=8.0cm]{images/mshadows}\\
 
+\newpage Working textures on spheres:\\
+\includegraphics[keepaspectratio,width=8.0cm]{images/earth}\\
 \end{document}
