--- a/report.tex
+++ b/report.tex
@@ -15,7 +15,7 @@
 		Owen Huang 4317459\\
 		Arjan Langerak 4211235\\
 		Skip Lentz 4334051\\
-		Dennis van Velzen <nr>\\
+		Dennis van Velzen 4338324\\
 		Richard van de Kuilen 4226151\\
 	   }
 
