Add normal maps image to report

--- a/report.tex
+++ b/report.tex
@@ -60,4 +60,7 @@ Testing multiple shadows:\\
 
 \newpage Working textures on spheres:\\
 \includegraphics[keepaspectratio,width=8.0cm]{images/earth}\\
+
+\newpage Working texture AND normal map on cube:
+\includegraphics[keepaspectratio,width=8.0cm]{images/normal_maps}\\
 \end{document}
