--- a/report.tex
+++ b/report.tex
@@ -65,5 +65,5 @@ Testing multiple shadows:\\
 \includegraphics[keepaspectratio,width=8.0cm]{images/earth}\\
 
 Normal map working ten minutes before the deadline:\\
-\includegraphics[keepaspectratio,width=8.0cm]{images/normalmaps}\\
+\includegraphics[keepaspectratio,width=8.0cm]{images/normalmap}\\
 \end{document}
